# persepolis_lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
persepolis_cmd/: persepolis_cmd.py  persepolis_lib.py  useful_tools.py
persepolis_lib/: \  __init__.py  persepolis_cmd.py  persepolis_lib.py  useful_tools.py
test/: test.py
